[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsync"
version = "0.1.0"
description = "A shared, repo-local memory layer that synchronizes context across AI coding tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Agent Memory Synchronizer Contributors" }]
keywords = ["ai", "llm", "claude", "cursor", "copilot", "agents", "memory", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jsonschema>=4.21.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "syrupy>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
agentsync = "agentsync.cli.main:app"

[project.urls]
Homepage = "https://github.com/agentsync/agentsync"
Repository = "https://github.com/agentsync/agentsync"
Issues = "https://github.com/agentsync/agentsync/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsync"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentsync/templates" = "agentsync/templates"
"src/agentsync/schemas" = "agentsync/schemas"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
